# Robot-over-ROS2

./: README.md  requirements.txt
Reyes_Pa/: package.xml  setup.cfg  setup.py
Reyes_Pa/Reyes_Pa/: Fino.py  P1_EnvFoto.py  P1_RecFoto.py  P2_EnvFoto.py  Prueba.py  T1_PubRPM.py  T1_PubSub.py  T1_SubLinSpeed.py  T2_Cliente.py  T2_Cliente1.py  T2_Servidor.py  T2_Servidor1.py
Reyes_Pa/launch/: Prueba.launch.py  Union.launch.py  lolo.launch.py  n.launch.py
Z_pkg/: package.xml  setup.cfg  setup.py
Z_pkg/srv/: Foto.srv  SetBool.srv  Trigger.srv  Word.srv
bichosu_pkg/: CMakeLists.txt  package.xml
chamo/: setup.cfg  setup.py
chamo/chamo/: pubhen.py
chamo_pkg/: package.xml  setup.cfg  setup.py
chamo_pkg/chamo_pkg/: my_pub.py  my_sub.py
henry_pkg/: package.xml  setup.cfg  setup.py
henry_pkg/henry_pkg/: client.py  client2.py  cuadrado_robot_node.py  fis.py  server.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/chamo/share/chamo/: package.bash  package.dsv  package.ps1  (+3 more)
ivan_pkg/: package.xml  setup.cfg  setup.py
ivan_pkg/ivan_pkg/: client.py  client_1.py  lineal_speed.py  my_node.py  my_pub.py  my_sub.py  rpm.py  rpm_publisher.py  server.py
launch/: Nodos.launch.py  Tarea.launch.py  python_parameters_launch.py
log/: latest_build
lolito/: CMakeLists.txt  package.xml
lolito/Scripts/: pub-raul.py
lolito/lolito/scripts/: pubhen.py
lolito/scripts/: publisher_member_function.py
lolito_interfaces/: CMakeLists.txt  package.xml
lolito_interfaces/srv/: CaptureImage.srv  Foto.srv  Word.srv
modelo_robot/: package.xml  setup.py
modelo_robot/launch/: gazebo.launch.py
modelo_robot/modelo_robot/: P_reci.py  Perras.py
my_package/: package.xml  setup.py
peruano_pkg/: package.xml  setup.cfg  setup.py
peruano_pkg/peruano_pkg/: P_EnviarFoto.py  P_RecibirFoto.py  T_LinSpeed.py  T_PubRpm.py  T_PubSub.py  jack_pub.py  jackson.py  prueba.py
python_parameters/: package.xml  setup.py
python_parameters/launch/: python_parameters_launch.py
raul_pkg/: package.xml  setup.cfg  setup.py
raul_pkg/launch/: python_parameters_launch.py
raul_pkg/raul_pkg/: client.py  pub_rpm.py  rpm2ls.py  server.py  sub_raul.py
willy_pkg/: package.xml  setup.cfg  setup.py
willy_pkg/willy_pkg/: Client_photo.py  foto_cliente.py  lineal_speed.py  publisher_member_function.py  subscriber_member_function.py  subscriber_photo.py
(+16 files in other folders)
