<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>modelo_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="u7003510@unimilitar.edu.co">z3rn291</maintainer>
  <license>TODO: License declaration</license>
  <license>Apache License 2.0</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>math</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>
  <build_depend>image_transport</build_depend>
  <exec_depend>image_transport</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>OpenCV</build_depend>
  <exec_depend>OpenCV</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
